#118: Switch to List.of(...) for CreateSource, EditSource, and DeleteSource UCs